--- a/style.scss
+++ b/style.scss
@@ -37,38 +37,24 @@ main{
 .text{
     z-index: 50;
     position: absolute;
-    width: 100%;
-    top: 60px;
+    right: 0;
+    bottom: 5px;
     color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     h2{
+        padding-right: 30px;
         position: relative;
-        text-align: center;
-        font-size: 50px;
+        text-align: right;
+        font-size: 40px;
         font-family: 'Caveat', cursive;
-        color: #ffcede;
-    }
-    form{
-        position: relative;
-        width: 200px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        >*{
-            padding: 5px 10px;
-            border-radius: 5px;
-            text-align: center;
-        }
-        .submit{
-            color: white;
-            font-family: 'Alegreya', serif;
-            background-color: rgb(185, 129, 64) ;
-        }
-    }
-    .sub{ 
+        color: #ffe2eb;
+    }    
+}
+.sub{ 
+        z-index: 51;
+        position: absolute;
+        left: 50px;
         margin-top: 200px;
+        color: white;
         >*{
             font-family: 'Alegreya', serif;
         }
@@ -77,26 +63,65 @@ main{
             font-size: 35px;
         }
         h4{
-            margin-top: 150px;
-            text-align: center;
+            text-align: left;
             font-size: 20px;
+            padding-left: 5px;
+        }
+        form{
+            position: relative;
+            width:100%;
+            padding-left: 5px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            >*{
+                padding: 5px 10px;
+                border-radius: 5px;
+                text-align: center;
+                background-color: rgba(255, 255, 255, 0) ;
+                border-radius: 5px;
+                border: 2px white solid;
+            }
+            .submit{
+                margin-left: 5px;
+                color: white;
+                font-family: 'Alegreya', serif;
+                &:hover{
+                    color: black;
+                    background-color: white;
+                    cursor: pointer;
+                }
+            }
+            .redirect{
+                margin-left: 5px;
+                padding: 5.5px 10px;
+                color: white;
+                background-color: rgb(185, 129, 64) ;
+                font-family: 'Fredericka the Great', cursive;
+                &:hover{
+                    color: rgb(185, 129, 64);
+                    background-color: white;
+                }
+            }
         }
     }
-}
+
 .background{
     z-index: 1;
     position: relative;
     height: 100%;
     overflow: hidden;
+    background-color: black;
     .filter{
         position: absolute;
         top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.256) ;
-        width: 100%;
+        left: 200px;
         height: 100%;
+        width: 100%;
+        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(0 0 0 / 36%) 42%, rgba(255,255,255,0) 100%);        height: 100%;
     }
     img{
+        padding-left: 200px;
         width: 100%;
         height: 100%;
         object-fit: cover;
